<resources>
    <string name="app_name">Splitsy</string>
    <string name="diamond_shape">Diamond_shape</string>
    <string name="sign_in">Sign In</string>
    <string name="hi_there">Hi There</string>
    <string name="example_splitsy_com">example@splitsy.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="padlock">padlock</string>
    <string name="sign_up">Sign Up</string>
    <string name="person">person</string>
    <string name="enable_fingerprint">Enable Fingerprint</string>
    <string name="give_splitisy_permission_to_unlock_this_app_using_the_fingerprint_sensor">Give Splitisy permission to unlock this app using the fingerprint sensor</string>
    <string name="fingerprint_draw">fingerprint draw</string>
    <string name="i_give_permission_for_the_use_of_my_fingerprint_for_login_purposes">I give permission for the use of my fingerprint for login purposes</string>
    <string name="deny">DENY</string>
    <string name="past_bills1">Past Bills</string>
    <string name="new_bill1">New Bill</string>
    <string name="account1">Account</string>
    <string name="new_bill">New Bill</string>
    <string name="create_new_bill">Create New Bill</string>
    <string name="join_bill">Join Bill</string>
    <string name="bill_name">Bill Name</string>
    <string name="pay_by_day">Pay By Day</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="bill_name1">Bill name</string>
    <string name="number_of_members_to_join">Number of members to join</string>
    <string name="split_type">Split Type</string>
    <string name="by_item">By Item</string>
    <string name="equally">Equally</string>
    <string name="two_person_shape">two person shape</string>
    <string name="continue1">Continue</string>
    <string name="enter_bill_details">Enter Bill Details</string>
    <string name="enter_bill_amount">Enter Bill Amount</string>
    <string name="poundsign">£</string>
    <string name="enter_second_bill_amount">Enter Second Bill Amount</string>
    <string name="enter_third_bill_amount">Enter Third Bill Amount</string>
    <string name="add_another_bill">Add another bill</string>
    <string name="create">Create</string>
    <string name="share_code">Share Code</string>
    <string name="share_the_code_below_with_the_members_of_this_bill">Share the code below with the members of this bill</string>
    <string name="_0000_0000">0000–0000</string>
    <string name="qr_code">QR code</string>
    <string name="your_bill">Your Bill</string>
    <string name="_00_00">£00.00</string>
    <string name="we_will_notify_you_when_you_have_been_paid_back_by_each">We will notify you when you have been paid back by each</string>
    <string name="view_bill_details">View Bill Details</string>
    <string name="your_account">Your Account</string>
    <string name="nickname">Nickname</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="card_details">Card Details</string>
    <string name="edit_card">Edit Card</string>
    <string name="add_new_card">Add New Card</string>
    <string name="log_out">Log out</string>
    <string name="settings_icon">settings icon</string>
    <string name="july">July</string>
    <string name="_2020">2020</string>
    <string name="good_times_and_bites">Good times and Bites</string>
    <string name="_23_88">£23.88</string>
    <string name="dinner_and_bites">Dinner and Bites</string>
    <string name="pending">Pending</string>
    <string name="_13_80">£13.80</string>
    <string name="repayment_pending">Repayment Pending</string>
    <string name="paid">Paid</string>
    <string name="repayments_complete">Repayments Complete</string>
    <string name="past_bills">Past Bills</string>
    <string name="filter_by">Filter By</string>
    <string name="tags">Tags</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort">Sort</string>
    <string name="done">Done</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the Terms of Service and Privacy Policy</string>
    <string name="have_an_account">Have an account?</string>
    <string name="this_is_the_name_others_will_see">This is the name others will see.</string>
    <string name="account_details">Account Details</string>
    <string name="credit_card">credit card</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="this_is_the_last_three_digits_on_the_back_of_your_card">This is the last three digits on the back of your card</string>
    <string name="finish">Finish</string>
    <string name="please_enter_you_email_address_to_reset_your_password">Please enter you email address to reset your password</string>
    <string name="submit">Submit</string>
    <string name="email_sent">Email Sent</string>
    <string name="please_follow_the_instructions_on_your_email_to_reset_your_password">Please follow the instructions on your email to reset your password</string>
    <string name="home">Home</string>
    <string name="hi_there_nice_to_see_you_again">Hi there! Nice to see you again!</string>
    <string name="please_use_biometrics_to_sign_in">Please use biometrics to sign in</string>
    <string name="image_of_a_fingerprint">image of a fingerprint</string>
    <string name="change_account">Change Account</string>
    <string name="not_you">Not you?</string>
    <string name="scan_your_receipt">Scan Your Receipt</string>
    <string name="or_add_details_manually">Or add details manually</string>
    <string name="image_of_a_camera">image of a camera</string>
    <string name="click_here_to_scan">Click here to scan</string>
    <string name="add_another_item">Add another item</string>
    <string name="item_s_name">Item\'s Name</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="on_the_next_page_give_this_app_permission_to_access_your_camera">On the next page give this app permission to access your camera</string>
    <string name="select_items">Select items</string>
    <string name="select_the_items_you_want_to_pay_for">Select the items you want to pay for:</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="david_dinner_bill">David Dinner Bill</string>
    <string name="price">Price</string>
    <string name="sushi">Sushi</string>
    <string name="_1">1</string>
    <string name="_16_75">£16.75</string>
    <string name="bites">Bites</string>
    <string name="drinks">Drinks</string>
    <string name="_2">2</string>
    <string name="_75">£!$.75</string>
    <string name="_08_65">£08.65</string>
    <string name="_14_75">£14.75</string>
    <string name="check_items">Check Items</string>
    <string name="check_that_all_the_items_have_been_scanned_correctly">Check that all the items have been scanned correctly</string>
    <string name="edit">Edit</string>
    <string name="pencil_making_a_line">pencil making a line</string>
    <string name="high_constrast_mode">High Constrast Mode</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="fingerprint_access">Fingerprint Access</string>
    <string name="notifications">Notifications</string>
    <string name="export_data">Export data</string>
    <string name="floppy_disc">floppy disc</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="confirm">Confirm</string>
    <string name="email_changed">Email Changed</string>
    <string name="you_ve_successfully_updated_your_email_well_done">You\'ve successfully updated your email, well done!</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_changed">Password Changed</string>
    <string name="you_have_successfully_updated_your_password_well_done">You\'ve successfully updated your password, well done!</string>
    <string name="you_have_successfully_added_a_new_bank_card_well_done">You\'ve successfully added a new bank card, well done!</string>
    <string name="bank_card_added">Bank card added</string>
    <string name="so_your_section_of_the_bill_is">so your section of the bill is</string>
    <string name="_10_00">£ 10.00</string>
    <string name="there_are">There are</string>
    <string name="_3">3</string>
    <string name="_0_00">£ 0.00</string>
    <string name="the_pay_by_date_for_this_bill_is">The pay-by date for this bill is</string>
    <string name="members_in_the_bill">members in the bill,</string>
    <string name="pay_later">Pay Later</string>
    <string name="pay_now">Pay Now</string>
    <string name="the_total_bill_amount_is">The total bill amount is</string>
    <string name="_11_01_2021">11/01/2021</string>
    <string name="_00_00_00">00/00/00</string>
    <string name="card_payments_will_only_be_processed_once_all_members_have_completed_selection">Card payments will only be processed once all members have completed selection</string>
    <string name="_10_25">£10.25</string>
    <string name="_30_45">£30.45</string>
    <string name="description">Description</string>
    <string name="_6_80">£6.80</string>
    <string name="your_amount">Your amount</string>
    <string name="_5">5</string>
    <string name="members">Members</string>
    <string name="total_amount">Total amount</string>
    <string name="_28_04_21">28/04/21</string>
    <string name="_26_80">£26.80</string>
    <string name="your_section_of_the_bill_is">Your section of the bill is</string>
    <string name="payment_accepted">Payment Accepted!</string>
    <string name="congrats_you_weren_t_the_last_one">Congrats! You weren\'t the last one!</string>
    <string name="your_payment_has_been_accepted_and_will_be_processed_once_all_of_the_items_have_been_selected">Your payment has been accepted and will be processed once all of the items have been selected</string>
    <string name="better_late_then_never">Better late then never</string>
    <string name="we_ll_notify_you_once_your_payment_has_been_processed">We\'ll notify you once your payment has been processed</string>
    <string name="payment_pending">Payment Pending</string>
    <string name="this_payment_is_pending_via_the_creators_confirmation">This payment is pending via the creators confirmation</string>
    <string name="we_ll_notify_you_once_your_payment_has_been_confirmed">We\'ll notify you once your payment has been confirmed</string>
    <string name="fingers_crossed">Fingers crossed</string>
    <string name="pay">Pay</string>
    <string name="scan_your_finger_print_to_confirm_payment">Scan your finger print to confirm payment</string>
    <string name="cash">Cash</string>
    <string name="payment_options">Payment Options</string>
    <string name="_0000">0000</string>
    <string name="i_acknowledge_that_by_joining_this_bill_i_owe_the_creator_a_section_of_this_bill">I acknowledge that by joining this bill I owe the creator a section of this bill</string>
    <string name="enter_code">Enter Code</string>
    <string name="hiphon">-</string>
</resources>