<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="false"
    android:layout_gravity="center_horizontal"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/filterByText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/filter_by"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="74dp">

            <RadioButton
                android:id="@+id/paidradiobutton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/paid"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/pendingradiobutton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/pending"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/tagsradiobutton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/tags"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/sorttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sort"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="104dp">

            <RadioButton
                android:id="@+id/amountradiobutton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/amount"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/dateradiobutton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/date"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/ascendingrariobutton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/ascending"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/descendingradiobutton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/descending"
                android:textSize="18sp" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/filterbutton"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/format_button"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:backgroundTint="@null" />
</LinearLayout>