<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailSent">

    <TextView
        android:id="@+id/emailSentText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_sent"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"/>

    <TextView
        android:id="@+id/emailSentText2"
        android:layout_width="284dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/please_follow_the_instructions_on_your_email_to_reset_your_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSentText1"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/homeButton"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/format_button"
        android:text="@string/home"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSentText2"
        app:layout_constraintVertical_bias="0.281"/>


</androidx.constraintlayout.widget.ConstraintLayout>